# MindFlayer

./: .gitignore  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  START_HERE.md  project.md
.github/: copilot-instructions.md
backend/: .env.example  README.md  config.py  main.py  pyproject.toml
backend/adapters/: __init__.py  azure.py  base.py  ollama.py  openrouter.py  registry.py  tgi.py  vllm.py
backend/api/: routes.py
backend/context/: __init__.py  builder.py  llm_parser.py  schema_inference.py
backend/generator/: __init__.py  gherkin_gen.py  junit_gen.py  openapi_gen.py  postman_gen.py  pytest_gen.py
backend/models/: __init__.py  context.py  generated_test.py  test_plan.py
backend/planner/: __init__.py  test_planner.py
backend/validator/: __init__.py  coverage.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/generate/: generate.module.css  page.tsx
frontend/app/settings/: page.tsx  settings.module.css
frontend/components/: CoverageReport.module.css  CoverageReport.tsx  Navbar.module.css  Navbar.tsx  PipelineVisualizer.module.css  PipelineVisualizer.tsx  TestOutput.module.css  TestOutput.tsx
frontend/lib/: api.ts
