[project]
name = "mindflayer"
version = "1.0.0"
description = "MindFlayer — AI-powered test intelligence engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "openai>=1.50.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.5.0",
    "pytest>=9.0.2",
    "uvicorn[standard]>=0.30.0",
]
